# SurvivorHealthMonitor

./: .gitignore  CMakeLists.txt  README.md  main_2.c
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: README.md  console.h  consoleAnimation.h  consoleInit.h  consoleScreen.h  timeController.h
src/: console.c  main  main.c  welcomeMessage.c
tests/: CMakeLists.txt
tests/unit/: README.md  hello_world_test.c
txt/: exit.txt  welcome.txt
